# facebook-political-ads

./: .eslintrc.js  .gitignore  .prettierrc.js  ARCHITECTURE.md  CODE_OF_CONDUCT.md  INSTALLATION.md  LICENSE  README.md
backend/server/: .dockerignore  .env  Cargo.toml  utm.csv
backend/server/migrations/2017-08-29-234524_add_classification/: down.sql  up.sql
backend/server/migrations/2017-08-29-234532_add_targeting/: down.sql  up.sql
backend/server/migrations/2017-08-31-225230_remove_fuzzy_id/: down.sql  up.sql
backend/server/migrations/2017-08-31-232451_rename_browser_lang_to_lang/: down.sql  up.sql
backend/server/migrations/2017-09-01-021623_add_indexes_on_fields/: down.sql  up.sql
backend/server/migrations/2017-09-12-052059_add_suppressed/: down.sql  up.sql
backend/server/migrations/2017-09-19-203139_add_text_indexes/: down.sql  up.sql
backend/server/migrations/2017-10-10-225338_create_tsvector_functions/: down.sql  up.sql
backend/server/migrations/2017-10-10-231026_add_lang_specific_text_indexes/: down.sql  up.sql
backend/server/migrations/2017-10-11-003921_create_create_plain_functions/: down.sql  up.sql
backend/server/migrations/2017-10-20-014535_add_update_trigger_to_ads/: down.sql  up.sql
backend/server/migrations/2017-10-31-214629_rework_notification_format/: down.sql  up.sql
backend/server/migrations/2017-11-10-225355_add_default_to_notifications/: down.sql  up.sql
backend/server/migrations/2017-11-20-221501_add_targeting_tables/: down.sql  up.sql
backend/server/migrations/2017-11-28-001041_rename_targeting/: down.sql  up.sql
backend/server/migrations/2017-11-28-223433_serial_ids/: down.sql  up.sql
backend/server/migrations/2017-11-28-231853_create_null_unique_index/: down.sql  up.sql
backend/server/migrations/2017-11-29-031418_jsonb_targeting/: down.sql  up.sql
backend/server/migrations/2017-11-30-194741_add_advertiser_to_ads/: down.sql  up.sql
backend/server/migrations/2017-11-30-200329_cleanup_old_targeting/: down.sql  up.sql
backend/server/migrations/2017-12-01-100800_add_entities/: down.sql  up.sql
backend/server/migrations/2017-12-01-230804_change_pages_to_array_and_add_defaults/: down.sql  up.sql
backend/server/migrations/2017-12-04-035636_change_pages_to_page/: down.sql  up.sql
backend/server/migrations/20170710202056_create_ads/: down.sql  up.sql
backend/server/migrations/20170717200852_add_browser_language/: up.sql
backend/server/migrations/20170718222122_add_images_to_ads/: down.sql  up.sql
backend/server/migrations/20170719220514_add_not_null_to_ad_fields/: down.sql
backend/server/migrations/20170808224202_add_impressions/: down.sql
backend/server/migrations/2018-06-19-134846_add_lower_page/: down.sql  up.sql
backend/server/migrations/2018-06-19-141914_add_targetings_to_ads/: down.sql  up.sql
backend/server/public/: .babelrc  ad.html  admin.html  index.html  package-lock.json  package.json  webpack.config.js
backend/server/public/__tests__/: actions.js  ads.json  components_ad.js  components_addetail.js  components_admin.js  components_admin_addetail.js  components_admin_admin.js  components_admin_ads.js  components_admin_login.js  components_ads.js  reducers.js  utils.js
backend/server/public/css/: _colors.scss  _grid-settings.scss  _josef.scss  _mixins.scss  _reset.scss  _typography.scss  admin.scss  ads.scss  main.scss  styles.css
backend/server/public/fonts/: Graphik-Black-Web.eot  Graphik-BlackItalic-Web.eot  Graphik-Bold-Web.eot  Graphik-BoldItalic-Web.eot  Graphik-Extralight-Web.eot  Graphik-ExtralightItalic-Web.eot  Graphik-Light-Web.eot  Graphik-LightItalic-Web.eot  Graphik-Medium-Web.eot  Graphik-MediumItalic-Web.eot  Graphik-Regular-Web.eot  Graphik-RegularItalic-Web.eot  Graphik-Semibold-Web.eot  Graphik-SemiboldItalic-Web.eot  Graphik-Super-Web.eot  Graphik-SuperItalic-Web.eot  Graphik-Thin-Web.eot  Graphik-ThinItalic-Web.eot  TiemposHeadlineWeb-Black.eot  TiemposHeadlineWeb-BlackItalic.eot  TiemposHeadlineWeb-Bold.eot  TiemposHeadlineWeb-BoldItalic.eot  TiemposHeadlineWeb-Light.eot  TiemposHeadlineWeb-LightItalic.eot  TiemposHeadlineWeb-Medium.eot  TiemposHeadlineWeb-MediumItalic.eot  TiemposHeadlineWeb-Regular.eot  TiemposHeadlineWeb-RegularItalic.eot  TiemposHeadlineWeb-Semibold.eot  TiemposHeadlineWeb-SemiboldItalic.eot  TiemposTextWeb-Bold.eot  TiemposTextWeb-BoldItalic.eot  TiemposTextWeb-Medium.eot  TiemposTextWeb-MediumItalic.eot  TiemposTextWeb-Regular.eot  TiemposTextWeb-RegularItalic.eot  TiemposTextWeb-Semibold.eot  TiemposTextWeb-SemiboldItalic.eot
backend/server/public/js/: main.js
backend/server/public/src/: actions.js  admin.js  admin.jsx  beacons.js  filters.jsx  i18n.js  index.jsx  pagination.js  pagination.jsx  reducers.js  utils.js
backend/server/src/: another-html-test.txt  errors.rs  html-test.txt  lib.rs  models.rs  schema.rs  server.rs  targeting_parser.rs
backend/server/tests/: restful_routing_test.rs  routing.rs  targeting_parser.rs  targeting_parser_test.rs
backend/server/tools/: bench.lua
backend/tools/: Cargo.toml  archive.sh
backend/tools/ruby/: Gemfile  dumper.rb  grabber.rb  parties.txt
server/: .env  Cargo.toml
server/migrations/20170714223830_add_timestamps/: down.sql  up.sql
server/migrations/20170717200852_add_browser_language/: down.sql
server/migrations/20170719220514_add_not_null_to_ad_fields/: up.sql
server/migrations/20170808224202_add_impressions/: up.sql
server/src/: html-test.txt  lib.rs  models.rs  schema.rs  server.rs
server/tools/: bench.lua
(+244 files in other folders)
