[package]
name = "server"
version = "0.1.0"
authors = ["Jeff Larson <thejefflarson@gmail.com>"]

[dependencies]
hyper = "0.11.1"
dotenv = "0.10.1"
diesel = { version = "0.14.0", features = ["postgres"] }
diesel_codegen = { version = "0.14.0", features = ["postgres"] }
r2d2 = "0.7.3"
r2d2-diesel = "0.14.0"
rusoto_core = "0.27.0"
rusoto_s3 = "0.27.0"
futures = "0.1.14"
futures-cpupool = "0.1.5"
lazy_static = "0.2.8"
serde = "1.0.9"
serde_json = "1.0.2"
serde_derive = "1.0.9"
pretty_env_logger = "0.1.1"
log = "0.3.8"