[package]
name = "server"
version = "0.1.0"
authors = ["Jeff Larson <thejefflarson@gmail.com>"]

[dependencies]
chrono = { version = "^0.4.0", features = ["serde"] }
diesel = { version = "^0.16", features = ["chrono", "postgres"] }
diesel_codegen = { version = "^0.16", features = ["postgres"] }
diesel_full_text_search = "^0.16.0"
dotenv = "^0.10.1"
error-chain = "^0.11.0"
futures = "^0.1.17"
futures-cpupool = "^0.1.5"
hyper = "^0.11.2"
hyper-tls = "^0.1.2"
jsonwebtoken = "^3.0.0"
kuchiki = "^0.6.0"
log = "^0.3.8"
log4rs = "^0.7.0"
r2d2 = "^0.7.4"
r2d2-diesel = "^0.16.0"
rusoto_core = "^0.29.0"
rusoto_credential = "^0.9.0"
rusoto_s3 = "^0.29.0"
serde = "^1.0.19"
serde_json = "^1.0.5"
serde_derive = "^1.0.16"
tokio-core = "^0.1.10"
tokio-postgres = { version = "^0.3.0" }
unicase = "^2.0.0"
url = "^1.6.0"