[package]
name = "server"
version = "0.1.0"
authors = ["Jeff Larson <thejefflarson@gmail.com>"]

[dependencies]
chrono = { version = "^0.4.0", features = ["serde"] }
diesel = { version = "^1.1.1", features = ["chrono", "postgres", "serde_json", "32-column-tables", "r2d2"] }
diesel_full_text_search = "^1.0.0"
dotenv = "^0.11.0"
error-chain = "^0.12.0"
futures = "^0.1.17"
futures-cpupool = "^0.1.5"
hyper = "^0.11.8"
hyper-tls = "^0.1.2"
jsonwebtoken = "^4.0.0"
kuchiki = "^0.7.0"
log = "^0.4"
log4rs = "^0.8.0"
nom = "^3.2.1"
rand = "^0.4"
regex = "^0.2"
r2d2 = "^0.8"
r2d2-diesel = "^1.0.0"
rusoto_core = "^0.32.0"
rusoto_credential = "^0.11.0"
rusoto_s3 = "^0.32.0"
serde = "^1.0.23"
serde_json = "^1.0.6"
serde_derive = "^1.0.21"
tokio-core = "^0.1.10"
tokio-postgres = "^0.3.0"
tokio-timer = "^0.1.2"
unicase = "^2.0.0"
url = "^1.6.0"

[dev-dependencies]
reqwest = "^0.8.5"
lazy_static = "^1.0.0"
