[package]
name = "tools"
version = "0.1.0"
authors = ["Jeff Larson <thejefflarson@gmail.com>"]

[dependencies]
diesel = { version = "^0.16", features = ["postgres"] }
docopt = "^0.8.1"
dotenv = "^0.10.1"
futures = "^0.1.15"
futures-cpupool = "^0.1.5"
hyper = "^0.11.2"
hyper-tls = "^0.1.2"
kuchiki = "^0.5.1"
serde = "^1.0.14"
serde_derive = "^1.0.14"
r2d2 = "^0.7.4"
r2d2-diesel = "^0.16.0"
tokio-core = "^0.1.9"

classifier = { path = "../classifier" }
server = { path = "../server" }
