[package]
name = "tools"
version = "0.1.0"
authors = ["Jeff Larson <thejefflarson@gmail.com>"]

[dependencies]
chrono = { version = "^0.4.0", features = ["serde"] }
csv = "^1.0.0-beta.5"
diesel = { version = "^1.1.1", features = ["postgres", "r2d2"] }
docopt = "^0.8.1"
dotenv = "^0.11.0"
futures = "^0.1.15"
futures-cpupool = "^0.1.5"
hyper = "^0.11.8"
hyper-tls = "^0.1.2"
kuchiki = "^0.7.0"
serde = "^1.0.23"
serde_json = "^1.0.6"
serde_derive = "^1.0.21"
r2d2 = "^0.8.2"
rusoto_core = "^0.32.0"
rusoto_credential = "^0.11.0"
rusoto_s3 = "^0.32.0"
tokio-core = "^0.1.10"
url = "^1.5.1"

server = { path = "../server" }
